# DRL_Navigation_Robot_ROS2_Foxy

./: README.md
src/td3/: CMakeLists.txt  package.xml
src/td3/launch/: multi_robot_scenario.launch.py  pioneer3dx.rviz  robot_state_publisher.launch.py  test_simulation.launch.py  training_simulation.launch.py
src/td3/models/td_robot/: model.config  td_robot.sdf
src/td3/scripts/: point_cloud2.py  test_velodyne_node.py  test_velodyne_node_original.py  train_velodyne_node.py
src/td3/scripts/results/: TD3_velodyne.npy
src/td3/urdf/: td_robot.urdf
src/td3/worlds/: td3.world  td3_1.world  td3_org.world
src/velodyne_simulator/velodyne_description/: CMakeLists.txt  package.xml
src/velodyne_simulator/velodyne_description/launch/: example-launch.py
src/velodyne_simulator/velodyne_description/models/rs_robot/: model.config
src/velodyne_simulator/velodyne_description/models/rs_robot/meshes/DAE/sensors/camera/: camera.dae
src/velodyne_simulator/velodyne_description/models/rs_robot/meshes/DAE/suspension/: front_left_link.dae
src/velodyne_simulator/velodyne_description/models/rs_robot/meshes/STL/base/: base_link.stl
src/velodyne_simulator/velodyne_description/models/rs_robot/meshes/STL/lidar_base/: YDlidar_base.stl
src/velodyne_simulator/velodyne_description/models/rs_robot/meshes/STL/lidar_head/: YDlidar_head v4.stl
src/velodyne_simulator/velodyne_description/models/rs_robot/meshes/STL/suspension/: FRONT_RIGHT_LINKSTL.stl  REAR_LEFT_LINKSTL.stl  REAR_RIGHT_LINKSTL.stl  sus_link.stl
src/velodyne_simulator/velodyne_description/world/: lio_sam.model
(+12 files in other folders)
